--- a/public/styles.css
+++ b/public/styles.css
@@ -1,48 +1,74 @@
 /* styles.css */
 
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f1f1f1;
-    margin: 0;
-    padding: 0;
-  }
-  
-  header {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-  }
-  
-  h1 {
-    margin: 0;
-    font-size: 24px;
-  }
-  
-  p {
-    margin-top: 10px;
-  }
-  
-  main {
-    padding: 20px;
-  }
-  
-  ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  li {
-    background-color: #fff;
-    border-radius: 4px;
-    margin-bottom: 10px;
-    padding: 15px;
-    cursor: pointer;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    transition: background-color 0.3s;
-  }
-  
-  li:hover {
-    background-color: #f7f7f7;
-  }
-  
+  font-family: Arial, sans-serif;
+  background-color: #f1f1f1;
+  margin: 0;
+  padding: 0;
+}
+
+header {
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
+
+h1 {
+  margin: 0;
+  font-size: 24px;
+}
+
+p {
+  margin-top: 10px;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.code-container {
+  background-color: #000;
+  padding: 20px;
+  width: 80%;
+  max-width: 800px;
+  border-radius: 4px;
+}
+
+textarea {
+  width: 100%;
+  height: 400px;
+  color: #fff;
+  font-family: Consolas, monospace;
+  background-color: transparent;
+  border: none;
+  resize: vertical;
+  font-size: 14px;
+}
+
+textarea:focus {
+  outline: none;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  background-color: #fff;
+  border-radius: 4px;
+  margin-bottom: 10px;
+  padding: 15px;
+  cursor: pointer;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s;
+}
+
+li:hover {
+  background-color: #f7f7f7;
+}
