--- a/public/styles.css
+++ b/public/styles.css
@@ -27,7 +27,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: 75vh;
 }
 
 .code-container {
@@ -70,5 +70,22 @@ li {
 }
 
 li:hover {
+  background-color: #f7f7f7;
+}
+
+.return-button {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  padding: 10px 20px;
+  background-color: #fff;
+  color: #333;
+  text-decoration: none;
+  border-radius: 4px;
+  font-weight: bold;
+  transition: background-color 0.3s;
+}
+
+.return-button:hover {
   background-color: #f7f7f7;
 }
